hphp/test/slow/closure/ctor-case.php.expectf
Fatal error: Class cannot extend Closure in %s/ctor-case.php on line 3
